--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,11 +20,11 @@ jobs:
       - checkout
 
       # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "composer.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+      #- restore_cache:
+      #    keys:
+      #    - v1-dependencies-{{ checksum "composer.json" }}
+      #    # fallback to using the latest cache if no exact match is found
+      #    - v1-dependencies-
 
       #- run: composer install -n --prefer-dist
 
@@ -36,4 +36,9 @@ jobs:
       # run tests!
       #- run: phpunit
 
-      - run: echo "Test CircleCI"
+      - run:
+          name: test-echo
+          command: echo "Test CircleCI"
+      - run:
+          name: env variables
+          command: env | sort
