--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,27 @@
-# PHP CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-php/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/php:7.1.5-browsers
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mysql:9.4
-
-    working_directory: ~/repo
-
+    working_directory: ~/
     steps:
       - checkout
-
-      # Download and cache dependencies
-      #- restore_cache:
-      #    keys:
-      #    - v1-dependencies-{{ checksum "composer.json" }}
-      #    # fallback to using the latest cache if no exact match is found
-      #    - v1-dependencies-
-
-      #- run: composer install -n --prefer-dist
-
-      #- save_cache:
-      #    paths:
-      #      - ./vendor
-      #    key: v1-dependencies-{{ checksum "composer.json" }}
-        
-      # run tests!
-      #- run: phpunit
-
       - run:
-          name: test-echo
-          command: echo "Test CircleCI"
+          name: Save version
+          command: echo "${CIRCLE_SHA1:0:7}" > version.txt
       - run:
           name: env variables
           command: env | sort
+  build_docker:
+    working_directory: ~/
+    docker:
+      - image: docker:17.09.0-ce-git
+    steps:
+      - setup_remote_docker
+      - run:
+          name: List current directory
+          command: ls -lA
+      - run:
+          name: Build application Docker image
+          command: |
+            docker build --cache-from=wp -t wp -f Dockerfile .
