--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
           name: Save version
           command: echo "${CIRCLE_BRANCH}_${CIRCLE_SHA1:0:7}" > version.txt
       - run:
+          name: List current directory directly
+          command: ls -lA
+      - run:
           name: List current directory
           command: docker run --rm -t -v $(pwd):/app -w /app alpine:latest ls -lA
       - run:
