--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,13 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=wp -t wp -f Dockerfile .
+            docker build --cache-from=wp -t wp:${CIRCLE_SHA1:0:7} -f Dockerfile .
+      - deploy:
+          name: Push application Docker image
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              mkdir -p ~/.docker
+              echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_CREDS\"}}}" > ~/.docker/config.json
+              docker push "${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:7}"
+              rm -f ~/.docker/config.json
+            fi
