--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=wp -t wp:${CIRCLE_SHA1:0:7} -f Dockerfile .
+            docker build --cache-from=wp -t ${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:7} -f Dockerfile .
       - deploy:
           name: Push application Docker image
           command: |
