--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,24 +6,33 @@ jobs:
       - master
       - develop
     docker:
-      - image: docker:17.09.0-ce-git
+      - image: circleci/node:8.9.4
     steps:
       - checkout
-      - setup_remote_docker
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm build
+  build_docker:
+    working_directory: ~/wp
+    branches:
+      - master
+      - develop
+    docker:
+      - image: docker:17.09.0-ce-git
+    steps:
       - run:
-          name: Save version
-          command: echo "${CIRCLE_BRANCH}_${CIRCLE_SHA1:0:7}" > version.txt
+        name: Build application Docker image
+        command: |
+          docker build --cache-from=wp -t ${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:7} -f Dockerfile .
       - run:
-          name: List current directory directly
-          command: ls -lA
-      - run:
-          name: List current directory
-          command: docker run --rm -t -v /root/wp:/app -w /app alpine:latest ls -lA
-      - run:
-          name: Build application Docker image
-          command: |
-            docker build --cache-from=wp -t ${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:7} -f Dockerfile .
-      - deploy:
           name: Push application Docker image
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
@@ -32,3 +41,9 @@ jobs:
               docker push "${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:7}"
               rm -f ~/.docker/config.json
             fi
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
