--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,6 @@ version: 2
 jobs:
   build:
     working_directory: ~/wp
-    branches:
-      - master
-      - develop
     docker:
       - image: circleci/node:8.9.4
     steps:
@@ -22,9 +19,6 @@ jobs:
       - run: npm build
   build_docker:
     working_directory: ~/wp
-    branches:
-      - master
-      - develop
     docker:
       - image: docker:17.09.0-ce-git
     steps:
@@ -45,5 +39,15 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
-      - test
+      - build:
+          filters:
+            branches:
+              only:
+                - master
+                - develop
+      - build_docker:
+          filters:
+            branches:
+              only:
+                - master
+                - develop
