--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,9 +51,9 @@ jobs:
             fi
 workflows:
   version: 2
-  build_and_test:
+  build_and_deploy:
     jobs:
-      - checkout_code:
+      - checkout_code
       - build:
           filters:
             branches:
