define restoration path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
       - setup_remote_docker
       - restore_cache:
           key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/workflow
       - run:
           name: Build application Docker image
           command: |
