--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,10 +32,29 @@ jobs:
       - setup_remote_docker
       - attach_workspace:
           at: /tmp/workspace
+      - restore_cache:
+          keys:
+            - v1-{{ .Branch }}
+          paths:
+            - /caches/wp.tar
+      - run:
+          name: Load Docker image layer cache
+          command: |
+            set +o pipefail
+            docker load -i /caches/wp.tar | true
       - run:
           name: Build application Docker image
           command: |
             docker build --cache-from=wp -t ${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:9} -f Dockerfile .
+      - run:
+          name: Save Docker image layer cache
+          command: |
+            mkdir -p /caches
+            docker save -o /caches/wp.tar wp
+      - save_cache:
+          key: v1-{{ .Branch }}-{{ epoch }}
+          paths:
+            - /caches/wp.tar
       - run:
           name: Push application Docker image
           command: |
