--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,12 +45,12 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=wp -t ${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:9} -f Dockerfile .
+            docker build --cache-from=wp -t ${DOCKER_IMAGE_REPO}:latest -f Dockerfile .
       - run:
           name: Save Docker image layer cache
           command: |
             mkdir -p /caches
-            docker save -o /caches/wp.tar wp
+            docker save -o /caches/wp.tar ${DOCKER_IMAGE_REPO}
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
@@ -61,6 +61,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               mkdir -p ~/.docker
               echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_CREDS\"}}}" > ~/.docker/config.json
+              docker tag "${DOCKER_IMAGE_REPO}:latest" "${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:9}"
               docker push "${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:9}"
               rm -f ~/.docker/config.json
             fi
