--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           at: /tmp/workspace
       - restore_cache:
           keys:
-            - v1-{{ .Branch }}
+            - docker-{{ .Branch }}
           paths:
             - /caches/wp.tar
       - run:
@@ -52,19 +52,34 @@ jobs:
             mkdir -p /caches
             docker save -o /caches/wp.tar ${DOCKER_IMAGE_REPO}
       - save_cache:
-          key: v1-{{ .Branch }}-{{ epoch }}
+          key: docker-{{ .Branch }}-{{ epoch }}
           paths:
             - /caches/wp.tar
-      - run:
+      - deploy:
           name: Push application Docker image
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               mkdir -p ~/.docker
               echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_CREDS\"}}}" > ~/.docker/config.json
-              docker tag "${DOCKER_IMAGE_REPO}:latest" "${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:9}"
-              docker push "${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:9}"
+              docker tag ${DOCKER_IMAGE_REPO}:latest ${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:9}
+              docker push ${DOCKER_IMAGE_REPO}:${CIRCLE_SHA1:0:9}
               rm -f ~/.docker/config.json
             fi
+  deploy_to_ecs:
+    <<: *defaults
+    docker:
+      - image: python:2.7.13
+        command: /bin/bash
+    steps:
+      - setup_remote_docker
+      - attach_workspace:
+          at: /tmp/workspace
+      - run:
+          name: Install dependencies
+          command: pip install awscli
+      - run:
+          name: Run deploy script
+          command: ls -la && env | sort && echo /tmp/workspace/.circleci/deploy.sh
 workflows:
   version: 2
   build_and_deploy:
@@ -83,3 +98,11 @@ workflows:
                 - develop
           requires:
             - build
+      - deploy_to_ecs:
+          filters:
+            branches:
+              only:
+                - master
+                - develop
+          requires:
+            - build_docker
